continued instruction work