@@ -4,7 +4,9 @@ import honeyroasted.cello.environment.Environment;
 import honeyroasted.cello.environment.context.CodeContext;
 import honeyroasted.cello.node.instruction.Node;
 import honeyroasted.cello.node.instruction.util.AbstractNode;
+import honeyroasted.cello.node.modifier.Access;
 import honeyroasted.cello.node.modifier.Modifier;
+import honeyroasted.cello.node.modifier.Modifiers;
 import honeyroasted.cello.node.structure.ClassNode;
 import honeyroasted.cello.node.structure.FieldNode;
 import honeyroasted.cello.verify.Verification;
@@ -28,38 +30,50 @@ public class GetStatic extends AbstractNode implements Node {
 
     private FieldNode target;
 
-    @Override
-    protected Verification<TypeInformal> doVerify(Environment environment, CodeContext context) {
-        VerificationBuilder<TypeInformal> builder = Verification.builder();
-        builder.source(this);
+    public static Verification<FieldNode> lookupStaticField(Namespace cls, String name, Environment environment, CodeContext context) {
+        VerificationBuilder<FieldNode> builder = Verification.builder();
 
-        Verification<ClassNode> lookup = environment.lookup(this.cls);
+        Verification<ClassNode> lookup = environment.lookup(cls);
         builder.child(lookup);
 
         if (lookup.success() && lookup.value().isPresent()) {
             ClassNode node = lookup.value().get();
-            List<FieldNode> fields = node.lookupFields(f -> f.name().equals(this.name));
+            List<FieldNode> fields = node.lookupFields(f -> f.name().equals(name));
 
             if (fields.isEmpty()) {
-                return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "Field '%s#%s' not found", this.cls.name(), this.name).build();
+                return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "Field '%s#%s' not found", cls.name(), name).build();
             }
 
-            fields = fields.stream().filter(f -> f.modifiers().has(Modifier.STATIC)).collect(Collectors.toList());
+            fields = fields.stream().filter(f -> f.modifiers().has(Modifier.STATIC)).toList();
 
             if (fields.isEmpty()) {
-                return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "Field '%s#%s' is not static", this.cls.name(), this.name).build();
+                return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "Field '%s#%s' is not static", cls.name(), name).build();
+            }
+
+            fields = fields.stream().filter(f -> context.owner().owner().accessTo(f.owner()).canAccess(f.modifiers().access())).toList();
+
+            if (fields.isEmpty()) {
+                return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "Field '%s#%s' is not accessible from class '%s'", cls.name(), name,
+                        context.owner().owner().parameterizedType().namespace().name()).build();
             }
 
             if (fields.size() > 1 && !fields.get(0).owner().equals(node)) {
                 return builder.error(Verify.Code.VAR_NOT_FOUND_ERROR, "'%s#%s' is ambiguous, possible fields in %s",
-                        this.cls.name(), this.name, fields.stream().map(f -> f.owner().parameterizedType().namespace().name()).toList()).build();
+                        cls.name(), name, fields.stream().map(f -> f.owner().parameterizedType().namespace().name()).toList()).build();
             }
 
-            this.target = fields.get(0);
-            builder.value(this.target.type());
+            builder.value(fields.get(0));
         }
 
         return builder.andChildren().build();
+    }
+
+    @Override
+    protected Verification<TypeInformal> doVerify(Environment environment, CodeContext context) {
+        return lookupStaticField(this.cls, this.name, environment, context).map(f -> {
+            this.target = f;
+            return f.type();
+        });
     }
 
     @Override
